js file modified

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
         </div>
         <div class="second w-[100%] border-[1px] border-x-gray-600 border-y-black">
             <div class="flex border-b-gray-600 border-b-[0.8px] relative">
-                <div class="flex justify-center w-[100%] py-4 hover:">For you</div>
-                <div class="flex justify-center w-[100%] py-4">Following</div>
-                <div class="absolute w-14 h-1 rounded-full bg-blue-500 bottom-0 left-[20%] z-10"></div>
+                <div class="flex justify-center w-[100%] py-4">
+                    <div>For you</div>
+                    <div class="absolute w-14 h-1 rounded-full bg-blue-500 bottom-0 z-10"></div>
+                </div>
+                <div class="flex justify-center w-[100%] py-4">Following</div>  
             </div>
             <div class="border-b-[1px] border-b-gray-600">
                 <div class="flex pl-3 pt-3">
@@ -88,10 +90,12 @@
                 <div class="w-[75px]"><img class="w-10 rounded-full ml-4 mr-2 mt-3" src="https://pbs.twimg.com/profile_images/1780044485541699584/p78MCn3B_400x400.jpg"></div>
                 <div class="w-[100%]">
                     <div class="flex justify-between pt-2">
-                        <div class="flex gap-2">
-                        <span class="font-bold">Elon Musk</span>
-                        <span class="material-symbols-outlined text-blue-400">verified</span>
-                        <span class="text-[16px] text-gray-500">@elonmusk · 15h</span>
+                        <div class="flex flex-col esm:flex-row esm:gap-2">
+                           <div  class="flex gap-2">
+                            <span class="font-bold">Elon Musk</span>
+                            <span class="material-symbols-outlined text-blue-400">verified</span>
+                           </div>
+                           <div class="text-[16px] text-gray-500">@elonmusk · 15h</div>
                         </div>
                         <span class="material-symbols-outlined text-gray-500 pr-2">more_horiz</span>
                     </div>
@@ -135,10 +139,12 @@
                 <div class="w-[75px]"><img class="w-10 ml-4 mr-2 mt-3" src="https://pbs.twimg.com/profile_images/877980023025803270/xntVDuTq_400x400.jpg"></div>
                 <div class="w-[100%]">
                     <div class="flex justify-between pt-2">
-                        <div class="flex gap-2">
-                        <span class="font-bold">PC Gamer</span>
-                        <span class="material-symbols-outlined text-yellow-400">verified</span>
-                        <span class="text-[16px] text-gray-500">@pcgamer · 41m</span>
+                        <div class="flex flex-col esm:flex-row esm:gap-2">
+                            <div  class="flex gap-2">
+                             <span class="font-bold">PC Gamer</span>
+                             <span class="material-symbols-outlined text-blue-400">verified</span>
+                            </div>
+                            <div class="text-[16px] text-gray-500">@pcgamer · 41m</div>
                         </div>
                         <span class="material-symbols-outlined text-gray-500 pr-2">more_horiz</span>
                     </div>
@@ -184,10 +190,12 @@
                 <div class="w-[75px]"><img class="w-10 ml-4 mr-2 mt-3 rounded-full" src="https://pbs.twimg.com/profile_images/1456245154377916417/oPMz8-kf_400x400.jpg"></div>
                 <div class="w-[100%]">
                     <div class="flex justify-between pt-2">
-                        <div class="flex gap-2">
-                        <span class="font-bold">Physics In History</span>
-                        <span class="material-symbols-outlined text-yellow-400">verified</span>
-                        <span class="text-[16px] text-gray-500">@PhysicsInHistory · 18H</span>
+                        <div class="flex flex-col esm:flex-row esm:gap-2">
+                            <div  class="flex gap-2">
+                             <span class="font-bold">Physics In History</span>
+                             <span class="material-symbols-outlined text-blue-400">verified</span>
+                            </div>
+                            <div class="text-[16px] text-gray-500">@PhysicsInHistory · 18H</div>
                         </div>
                         <span class="material-symbols-outlined text-gray-500 pr-2">more_horiz</span>
                     </div>
