https://jatinbaroliya.github.io/Twitter-Clone/

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="shortcut icon" href="https://abs.twimg.com/favicons/twitter-pip.3.ico">
     <link rel="stylesheet" href="src/output.css">
+    <meta name="google-site-verification" content="tk6bYBR03ZDPSqLaIZlSv7gglVftNZScUd8OO5tBgUk" />
 </head>
 <body class=" bg-black text-white">
      <div class="bg-black flex md:max-w-[83%] md:mx-auto">
